Programma di Amati (funziona)

--- a/es3.html
+++ b/es3.html
@@ -12,11 +12,11 @@
       <h1>CALCOLATRICE</h1>
       <table id="tab">
         <tr>
-          <th>numero</th>
+          <th>Numero</th>
         </tr>
       </table>
       <input type="number" id="num1" />
-      <button id="btn1">aggiungi</button>
+      <button id="btn1">Aggiungi</button>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <script>
         $("#btn1").click(function () {
